add color to h2 elements and bootsrap container feature to paragraph elements in about me page

--- a/websites.html
+++ b/websites.html
@@ -6,9 +6,13 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Ahona's Portfolio</h1>
-    <img class="mine" src="images/dp.jpg" alt="" />
-    <p>Welcome to my Portfolio</p>
+    <div class="nav">
+      <a href="index.html" class="nav-link"><h2>Home</h2> </a>
+      <a href="about-me.html" class="nav-link"><h2>About Me</h2> </a>
+      <a href="" class="nav-link"><h2>Moments</h2> </a>
+    </div>
+    <h1>Ahona's websites</h1>
+    <p></p>
     <p>
       My name is John Yoshi Ahona, a student of Moringa school taking web
       development. Below is a list of websites I have created in my first week
