add grid system to index.html

--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
       <a href="" class="nav-link"><h2>Moments</h2> </a>
     </div>
     <h1>My Portfolio</h1>
-    <img class="mine" src="images/dp.jpg" alt="" />
-    <p>
-      Hello, my name is John Yoshi Ahona, and this is my portfolio. It contains
-      3 sections, one about me, another about with pet websites I have created
-      and lastly a some important pictures of me.
-    </p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="mine" src="images/dp.jpg" alt="" />
+          <p>
+            Hello, my name is John Yoshi Ahona, and this is my portfolio. It
+            contains 3 sections, one about me, another about with pet websites I
+            have created and lastly a some important pictures of me.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
