separate descriptions and interests into separate columns

--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
             have created and lastly a some important pictures of me.
           </p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-3">
           <h3>Descriptions</h3>
           <ul>
             <li>Chess Player</li>
             <li>Student at Moringa School</li>
-            <h3>Interests</h3>
-            <ul>
-              <li>Chess</li>
-              <li>Coding</li>
-              <li>Mathematics</li>
-              <li>Dancing</li>
-              <li>Movies</li>
-              <li>Cycling</li>
-            </ul>
-          </ul>
+        </div>
+        <div class="col-md-3">
+              <h3>Interests</h3>
+              <ul>
+                <li>Chess</li>
+                <li>Coding</li>
+                <li>Mathematics</li>
+                <li>Dancing</li>
+                <li>Movies</li>
+                <li>Cycling</li>
+              </ul>
         </div>
       </div>
     </div>
