--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="col-md-6">
           <img class="mine" src="images/dp.jpg" alt="" />
           <p>
-            Hello, my name is John Yoshi Ahona, and this is my portfolio. It
+            Hello, my name is <span class="name">John Yoshi Ahona</span> , and this is my portfolio. It
             contains 3 sections, one about me, another about with pet websites I
             have created and lastly a some important pictures of me.
           </p>
@@ -30,8 +30,13 @@
         <div class="col-md-3">
           <h3>Descriptions</h3>
           <ul>
-            <li>Chess Player</li>
             <li>Student at Moringa School</li>
+            <li>KenSAP scholar</li>
+            <li>Chess Player</li>
+            <li>Thrive! Fellow, Shamiri Institute</li>
+            <li>Amateur math enthusiast</li>
+            <li>Dancer</li>
+            <li>Cyclist</li>
         </div>
         <div class="col-md-3">
               <h3>Interests</h3>
