add second row containing my contacts

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             contains 3 sections, one about me, another about with pet websites I
             have created and lastly a some important pictures of me.
           </p>
+          <p>See <a href="linkedin.com/in/john-yoshi-89ab331b8">my linkedin </a> for more information about my profile</p>
+          </ul>
         </div>
         <div class="col-md-3">
           <h3>Descriptions</h3>
@@ -50,6 +52,10 @@
               </ul>
         </div>
       </div>
+      <div class="row"><div class="column-md-6"></div><h3>Contacts</h3>
+      <ul>
+        <li> <h4> email</h4> yoshiahona@gmail.com</li>
+        <li><h4>instagram</h4> @Ahonoryoshi</li></div>
     </div>
   </body>
 </html>
