add math link to my websites page

--- a/websites.html
+++ b/websites.html
@@ -30,7 +30,7 @@
         the war of the minds!
       </p>
       <li>
-        <h3><a href=""> Mathematics</a></h3>
+        <h3><a href="math-web/index.html"> Mathematics</a></h3>
       </li>
       <p>
         Check out 3 legends of math who I like. These are the just but a few
