add chess url to websites

--- a/math-web/index.html
+++ b/math-web/index.html
@@ -9,9 +9,8 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="index.html" class="nav-link">Home</a>
-      <a href="mathematics.html" class="nav-link">Maths</a>
-      <a href="chess.html" class="nav-link">The math game</a>
+      <a href="index.html" class="nav-link"><h2> Home</h2></a>
+      <a href="chess.html" class="nav-link"><h2>The math game</h2></a>
     </nav>
     <p>
       <span class="key">mathematics</span> is the <em>language of the gods!</em>
