--- a/websites.html
+++ b/websites.html
@@ -21,7 +21,7 @@
     <h2>List of websites</h2>
     <ul>
       <li>
-        <h3><a href=""> My favorite game</a></h3>
+        <h3><a href="math-web/chess.html"> My favorite game</a></h3>
       </li>
       <p>See the game I love the most, chess!</p>
       <p>
