--- a/math-web/chess.html
+++ b/math-web/chess.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="index.html" class="nav-link">Home</a>
-      <a href="chess.html" class="nav-link">Maths</a>
-      <a href="chess.html" class="nav-link">The math game</a>
+      <a href="index.html" class="nav-link"><h2>Home</h2></a>
+      <a href="chess.html" class="nav-link"><h2>The math game</h2></a>
     </nav>
     <h1 class="a-heading">Chess</h1>
     <p>Hello World!</p>
     <p>Welcome to my <strong>first Website</strong></p>
+    <img src="images/chess.jpeg" alt="Photo  of a chess board" />
     <p>
       I will be talking about chess. This is the place to begin. I will handle
       everything you need to know about the game in the following order:
@@ -58,6 +58,5 @@
       Black and white colors are prefered. The person playing with the white
       pieces is referred to as "white" and the opponent, "black".
     </p>
-    <img src="images/chess.jpg" alt="Photo  of a chess board" />
   </body>
 </html>
