add jumbotron feature to the first paragraph in my portfolio

--- a/index.html
+++ b/index.html
@@ -18,44 +18,46 @@
     </div>
     <h1>My Portfolio</h1>
     <div class="container">
+      <div class="jumbotron"><img class="mine" src="images/dp.jpg" alt="" />
+        <p>
+          Hello, my name is <span class="name">John Yoshi Ahona</span> , and this is my portfolio. It
+          contains 3 sections, one about me, another about with pet websites I
+          have created and lastly a some important pictures of me.
+        </p>
+        <p>See <a href="https://www.linkedin.com/in/john-yoshi-89ab331b8/">my linkedin </a> for more information about my profile</p>
+        </ul></div>
       <div class="row">
         <div class="col-md-6">
-          <img class="mine" src="images/dp.jpg" alt="" />
-          <p>
-            Hello, my name is <span class="name">John Yoshi Ahona</span> , and this is my portfolio. It
-            contains 3 sections, one about me, another about with pet websites I
-            have created and lastly a some important pictures of me.
-          </p>
-          <p>See <a href="linkedin.com/in/john-yoshi-89ab331b8">my linkedin </a> for more information about my profile</p>
-          </ul>
+          
         </div>
         <div class="col-md-3">
           <h3>Descriptions</h3>
-          <ul>
-            <li>Student at Moringa School</li>
-            <li>KenSAP scholar</li>
-            <li>Chess Player</li>
-            <li>Thrive! Fellow, Shamiri Institute</li>
-            <li>Amateur math enthusiast</li>
-            <li>Dancer</li>
-            <li>Cyclist</li>
+            <ul>
+              <li>Student at Moringa School</li>
+              <li>KenSAP scholar</li>
+              <li>Chess Player</li>
+              <li>Thrive! Fellow, Shamiri Institute</li>
+              <li>Amateur math enthusiast</li>
+              <li>Dancer</li>
+              <li>Cyclist</li>
         </div>
         <div class="col-md-3">
-              <h3>Interests</h3>
-              <ul>
-                <li>Chess</li>
-                <li>Coding</li>
-                <li>Mathematics</li>
-                <li>Dancing</li>
-                <li>Movies</li>
-                <li>Cycling</li>
-              </ul>
+                <h3>Interests</h3>
+                <ul>
+                  <li>Chess</li>
+                  <li>Coding</li>
+                  <li>Mathematics</li>
+                  <li>Dancing</li>
+                  <li>Movies</li>
+                  <li>Cycling</li>
+                </ul>
         </div>
       </div>
       <div class="row"><div class="column-md-6"></div><h3>Contacts</h3>
       <ul>
         <li> <h4> email</h4> yoshiahona@gmail.com</li>
-        <li><h4>instagram</h4> @Ahonoryoshi</li></div>
+        <li><h4>instagram</h4> @Ahonoryoshi</li>
+      </div>
     </div>
   </body>
 </html>
