edit about me essays and add jumbotron to the first paragraph of My village

--- a/about-me.html
+++ b/about-me.html
@@ -17,42 +17,36 @@
     <h1>About Me</h1>
     <h2 class="header">The Villager</h2>
     <div class="container">
+      <div class="jumbotron">
+        <p class="box">
+          At the edge of the Chetambe Hills, you feel like you are at the edge
+          of the world. Looking down, you see the River Nzoia meandering through
+          the hills to a steep vertical river bed, now known as the Nabuyole
+          Falls. To the east, you can see the Nandi Escarpment in the
+          neighboring county, a county known for its endless fields of tea. When
+          the paper factory was here, a pine forest took over the westward
+          slopes. Of course, I know this is not the etdge of Earth, but this
+          place at the edge of my village still takes my breath away. This is
+          Webuye in Bungoma County.
+        </p>
+      </div>
       <p>
-        At the edge of the Chetambe Hills, you feel like you are at the edge of
-        the world. Looking down, you see the River Nzoia meandering through the
-        hills to a steep vertical river bed, now known as the Nabuyole Falls. To
-        the east, you can see the Nandi Escarpment in the neighboring county, a
-        county known for its endless fields of tea. When the paper factory was
-        here, a pine forest took over the westward slopes. Of course, I know
-        this is not the etdge of Earth, but this place at the edge of my village
-        still takes my breath away. This is Webuye in Bungoma County. When I was
-        last standing there, I had just been admitted to KenSAP (Kenya Scholar
-        Access Program). I sat on the cliffs, observing daily life below me and
-        reminiscing about how far I had come. It was the onset of the rainy
-        season and the scent of guava trees filled the air with the fragrance of
-        the ripe fruits. Monkeys were chattering boisterously while jumping from
-        tree to tree. Brown mushrooms sprouted from the spongy, moist grounds.
-        As a child, we found out the hard way which ones made for a nice
-        delicacy or a day of stomach pains. As I walk along the hills, I see an
-        old cargo train spewing smoke and slowly crawling toward the Uganda
-        border. In the distance, people without money chased the train along the
-        tracks for the chance to jump onto the sides for a free ride. On the
-        plains below, I noticed the deserted paper factory, now only used for
-        criminal activity and drug abuse. This factory had once been the source
-        of livelihood for the vast majority of Webuye's residents. Before the
-        factory, this village was a forest and I fear that its closing down will
-        mean the fall of Webuye. In the bush, behind me on the cliffs, some
-        whispers bring me back from my memories. “Ni uria watira masomo vilayi.”
-        (He is the one who got everything in school). I turn around and see
-        children staring at me and I give them some words of wisdom about doing
-        well in school. 3 Nowadays, with the factory closed, most families
-        struggle to make ends meet by selling crops or quarrying stones from the
-        Chetambe Hills. My father used to work casual jobs like this to make
-        ends meet until his demise. I remember the day he died like it was
-        yesterday. Earlier that month, my father was falsely diagnosed with
-        tuberculosis. We later found out he died of a preventable illness. I was
-        six years old and saw no hope in the future. We were riddled with debt
-        from his medical bills.
+        When I was last standing there, I had just been admitted to KenSAP
+        (Kenya Scholar Access Program). I sat on the cliffs, observing daily
+        life below me and reminiscing about how far I had come. It was the onset
+        of the rainy season and the scent of guava trees filled the air with the
+        fragrance of the ripe fruits. Monkeys were chattering boisterously while
+        jumping from tree to tree. Brown mushrooms sprouted from the spongy,
+        moist grounds. As a child, we found out the hard way which ones made for
+        a nice delicacy or a day of stomach pains. As I walk along the hills, I
+        see an old cargo train spewing smoke and slowly crawling toward the
+        Uganda border. In the distance, people without money chased the train
+        along the tracks for the chance to jump onto the sides for a free ride.
+      </p>
+      <p>
+        I was raised in Nabuyole Village in Webuye and lived there from my birth
+        date <span class="date"> 2002 to 2019 </span>when we moved to Kikuyu. I
+        am second in a family of 4 children and a mother.
       </p>
     </div>
 
@@ -60,44 +54,20 @@
 
     <div class="container">
       <p>
-        When he died, I was forced to switch schools to a local public primary
-        school, where education was free. We had to move into one of the
-        abandoned paper factory rooms, surrounded by poverty and lost hope. But
-        I maintained hope. My mother always told me, “education is the only way
-        out of poverty.” But education was not easy here. We walked three
-        kilometers to a dilapidated school that did not have enough books,
-        desks, or teachers to support us. After school, we fetched water and
-        firewood, weeded the garden, swung our jembes (garden hoe) to dig holes,
-        and found work at the quarry. Yet I always remembered that education was
-        our only chance. Life was difficult but school was simple. I found
-        myself in harmony with my academics. I developed a special interest for
-        Mathematics that still sticks with me today. I fell in love with
-        learning how numbers ruled the world around me and I started to explore
-        the world around me in a scientific manner. The hills became
-        opportunities to calculate the rate of flowing water, the garden became
-        a place for imagining the laws behind biological form, and our expenses
-        became a way for me to plan family finances. When my primary school
-        results were released, it was a frenzied celebration for the whole
-        village.
+        I started school in 2006 aged 4 at
+        <span class="name"> Saint Peters Academy </span>where I did 3 years of
+        pre school and class 1, in the 8-4-4 system. I then transferred school
+        to <span class="name"> Webuye AC primary School </span> where I schooled
+        for seven years,<span class="date"> from 2010 to 2016 </span>when I did
+        my <span class="acronym"> KCPE.</span>
       </p>
     </div>
     <h2 class="header">Secondary School</h2>
     <div class="container">
       <p>
-        I was selected to join Alliance High School, hundreds of kilometers away
-        from Webuye. The villagers were happy; one of their own had a chance to
-        bring back the fortunes of the distant land. They pooled together enough
-        money to support my first year at Alliance High School and a few weeks
-        later, my mother took me to high school. The journey from home to
-        Alliance cut through seventeen counties. We arrived at Alliance High
-        School almost a day after departing Webuye. I was thrilled to be
-        attending Kenya’s best high school, a school that would open up a whole
-        new world of possibilities for a better future. Almost immediately, I
-        found myself facing a whole new set of difficulties adjusting to
-        Alliance but as I walked through those gates, I felt accomplished - like
-        I had found a new edge of the world. I left my mother at the gate, but
-        not before she reminded me that education was our hope for a better
-        future
+        I was selected to <span class="name">Alliance High School</span> join in
+        Kikuyu after for secondary education. I joined the school in
+        <span class="date"> january 2017 and graduated in 2021 April.</span>
       </p>
     </div>
     <h2 class="header">Kenya Scholar Access Program</h2>
