add a class odd to all other paragraphs in about me

--- a/about-me.html
+++ b/about-me.html
@@ -30,7 +30,7 @@
           Webuye in Bungoma County.
         </p>
       </div>
-      <p>
+      <p class="odd">
         When I was last standing there, I had just been admitted to KenSAP
         (Kenya Scholar Access Program). I sat on the cliffs, observing daily
         life below me and reminiscing about how far I had come. It was the onset
@@ -43,7 +43,7 @@
         Uganda border. In the distance, people without money chased the train
         along the tracks for the chance to jump onto the sides for a free ride.
       </p>
-      <p>
+      <p class="odd">
         I was raised in Nabuyole Village in Webuye and lived there from my birth
         date <span class="date"> 2002 to 2019 </span>when we moved to Kikuyu. I
         am second in a family of 4 children and a mother.
@@ -53,7 +53,7 @@
     <h2 class="header">Primary School</h2>
 
     <div class="container">
-      <p>
+      <p class="odd">
         I started school in 2006 aged 4 at
         <span class="name"> Saint Peters Academy </span>where I did 3 years of
         pre school and class 1, in the 8-4-4 system. I then transferred school
@@ -64,7 +64,7 @@
     </div>
     <h2 class="header">Secondary School</h2>
     <div class="container">
-      <p>
+      <p class="odd">
         I was selected to <span class="name">Alliance High School</span> join in
         Kikuyu after for secondary education. I joined the school in
         <span class="date"> january 2017 and graduated in 2021 April.</span>
@@ -72,7 +72,7 @@
     </div>
     <h2 class="header">Kenya Scholar Access Program</h2>
     <div class="container">
-      <p>
+      <p class="odd">
         After graduating from Allince High School, I applied and got in to the
         Kenya SCholar Access Program, KenSAP, where I applied to college and got
         in.
@@ -80,7 +80,7 @@
     </div>
     <h2 class="header">Moringa School</h2>
     <div class="container">
-      <p>
+      <p class="odd">
         When KenSAP asked me if I was willing to join the famous Moringa school,
         I quickly accepted the offer. I was extremely passionate about enrolling
         since this would help me be at par with other freshmen in my college who
