fix a bug in travel website

--- a/websites.html
+++ b/websites.html
@@ -42,7 +42,7 @@
       </p>
 
       <li>
-        <h3><a href=""> Travel Agencies</a></h3>
+        <h3><a href="Travels/trails.html"> Travel Agencies</a></h3>
       </li>
       <p>
         I created this website for a travel company. It contains various tourist
