add my contacts to online shop

--- a/myshop/shop.html
+++ b/myshop/shop.html
@@ -18,8 +18,9 @@
           </p>
           <p>
             We have products ranging from small household appliances to large
-            property such as land at very agressively priced.
+            property such as land very agressively priced.
           </p>
+          For a purchase, email us at yoshiahona@gmail.com.
         </div>
         <div class="col-md-3">
           <h2>Types of products</h2>
